# spt-order

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
legs/: optimizers.py  plot_utils.py
legs/bond_alternating_heisenberg_model/: compiled_circuit_string_order.py  correlations_comparison.py  energies.json  evaluate_energy.py  first_excited_state_dmrg.py  generate_mps_with_dmrg.py  get_99.9_fidelity_compressed_mps.py  ground_state_correlations.py  ground_state_energies.py  ground_state_string_order.py  initialisation_comparison.py  model.py  utils.py
legs/bond_alternating_heisenberg_model/entanglement_spectrum/: entanglement_spectrum.py  entanglement_spectrum_dmrg_vs_aqc.py  resource_scaling.py
legs/bond_alternating_heisenberg_model/saved_mps/: target_n_100_J0_0.5_J1_1.0_hz_0.0_trunc_1e-12_compressed_bd_5.pkl  target_n_100_J0_0.5_J1_1.0_hz_0.0_trunc_1e-12_compressed_bd_None.pkl  target_n_100_J0_1.0_J1_-1.0_hz_0.0_trunc_1e-12_compressed_bd_None.pkl  target_n_100_J0_1.0_J1_-2.0_hz_0.0_trunc_1e-12_compressed_bd_8.pkl  target_n_100_J0_1.0_J1_-2.0_hz_0.0_trunc_1e-12_compressed_bd_None.pkl  target_n_100_J0_1.0_J1_0.5_hz_0.0_trunc_1e-12_compressed_bd_5.pkl  (+1 more)
legs/bond_alternating_heisenberg_model_compiling/: extract_result_from_checkpoint.py  plot_cost_histories_from_logs_or_checkpoints.py  plot_results.py  resume_from_checkpoint.py  run_compiling_cluster.py
legs/comparison_to_other_techniques/: aqc_method.py  schon_and_ran_method.py
legs/hardware_experiments/: utils.py
test/: test_adapt_aqc.py  test_aqc_tensor.py  test_bond_alternating_model.py  test_qiskit.py
(+60 files in other folders)
